--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <link href="datedropper.css" rel="stylesheet"/>
        
         
-        <link href="c/1.css" rel="stylesheet"/>
+        <link href="1.css" rel="stylesheet"/>
         <script src="jquery-3.4.1.min.js"></script>
         <script src="datedropper.js"></script>
-        <script src="c/1.js"></script>
+        <script src="1.js"></script>
     </head>
     <body>
         <form id="regForm" method="GET" action="document_page.php">
